@@ -6,7 +6,7 @@ import java.awt.event.ActionListener;
 import javax.swing.JButton;
 
 import edu.colorado.phet.common.phetcommon.resources.PhetCommonResources;
-import edu.colorado.phet.common.phetcommon.updates.OpenWebPageToNewVersion;
+import edu.colorado.phet.common.phetcommon.servicemanager.PhetServiceManager;
 import edu.colorado.phet.common.phetcommon.updates.SimUpdater;
 import edu.colorado.phet.common.phetcommon.util.PhetUtilities;
 
@@ -16,7 +16,7 @@ public class UpdateButton extends JButton {
         addActionListener( new ActionListener() {
             public void actionPerformed( ActionEvent e ) {
                 if ( PhetUtilities.isRunningFromWebsite() ) {
-                    OpenWebPageToNewVersion.openWebPageToNewVersion( project, sim );
+                    PhetServiceManager.showSimPage( project, sim );
                 }
                 else {
                     new SimUpdater().updateSim( project, sim, locale );
