@@ -1,3 +1,4 @@
+11-11-08: move OpenWebPageToNewVersion into PhetServiceManager, which already handles opening browser to PhET website pages
 11-11-08: see #924, "Update Now" button needs to do something different for online sims
 11-11-08: see #877, track how many times a sim is run
 11-11-08: add constant for .phet directory
